--- a/CHANGES
+++ b/CHANGES
@@ -23,6 +23,7 @@ Misc:
  - GBA Video: Allow multiple handles into the same tile cache
  - VFS: Call msync when syncing mapped data
  - GBA Video, GB Video: Colors are now fully scaled
+ - PSP2: Improved controller rumble
 
 0.5.1: (2016-10-05)
 Bugfixes:
