GB MBC: Fix initializing MBC when no ROM is loaded

--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,7 @@ Bugfixes:
  - Qt: Fix setting overrides
  - Qt: Fix cut off tiles and alignment issues in tile viewer
  - GBA Cheats: Fix GameShark ROM patches
+ - GB MBC: Fix initializing MBC when no ROM is loaded
 Misc:
  - PSP2: Improved controller rumble
  - GB, GBA: Prevent loading null ROMs
