--- a/CHANGES
+++ b/CHANGES
@@ -16,6 +16,7 @@ Bugfixes:
  - Qt: Fix setting overrides
  - GBA Cheats: Fix GameShark ROM patches
  - Qt: Fix cut off tiles and alignment issues in tile viewer
+ - GB MBC: Fix initializing MBC when no ROM is loaded
 Misc:
  - SDL: Remove scancode key input
  - GBA Video: Clean up unused timers
