--- a/CHANGES
+++ b/CHANGES
@@ -18,6 +18,7 @@ Bugfixes:
  - Qt: Fix cut off tiles and alignment issues in tile viewer
  - GB MBC: Fix initializing MBC when no ROM is loaded
  - VFS: Fix resizing memory chunks when not needed
+ - GB Memory: Fix patching ROM bank 0
 Misc:
  - SDL: Remove scancode key input
  - GBA Video: Clean up unused timers
