Debugger: Make building with debugging aspects optional

--- a/CHANGES
+++ b/CHANGES
@@ -32,6 +32,7 @@ Misc:
  - VFS: Allow truncating memory chunk VFiles
  - Debugger: Modularize CLI debugger
  - Core: Clean up some thread state checks
+ - Debugger: Make building with debugging aspects optional
 
 0.5.1: (2016-10-05)
 Bugfixes:
