--- a/CHANGES
+++ b/CHANGES
@@ -33,6 +33,7 @@ Misc:
  - Debugger: Modularize CLI debugger
  - Core: Clean up some thread state checks
  - Debugger: Make building with debugging aspects optional
+ - GBA Memory: Support for Mo Jie Qi Bing by Vast Fame (taizou)
 
 0.5.1: (2016-10-05)
 Bugfixes:
