--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,7 @@ Bugfixes:
  - GB MBC: Fix initializing MBC when no ROM is loaded
  - VFS: Fix resizing memory chunks when not needed
  - GB Memory: Fix patching ROM bank 0
+ - GB: Fix audio not being deinitialized
 Misc:
  - PSP2: Improved controller rumble
  - GB, GBA: Prevent loading null ROMs
