--- a/CHANGES
+++ b/CHANGES
@@ -20,6 +20,7 @@ Bugfixes:
  - GB MBC: Fix initializing MBC when no ROM is loaded
  - VFS: Fix resizing memory chunks when not needed
  - GB Memory: Fix patching ROM bank 0
+ - GB: Fix audio not being deinitialized
 Misc:
  - SDL: Remove scancode key input
  - GBA Video: Clean up unused timers
