--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,7 @@ Bugfixes:
  - VFS: Fix resizing memory chunks when not needed
  - GB Memory: Fix patching ROM bank 0
  - GB: Fix audio not being deinitialized
+ - GBA Memory: Fix VCOUNT being writable
 Misc:
  - PSP2: Improved controller rumble
  - GB, GBA: Prevent loading null ROMs
