--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@ Features:
  - Debugging console
  - Improved memory viewer
 Bugfixes:
+ - Libretro: Fix unterminated SET_INPUT_DESCRIPTORS
  - LR35902: Fix core never exiting with certain event patterns
  - GB Timer: Improve DIV reset behavior
  - GBA Memory: Fix misaligned BIOS reads
