--- a/CHANGES
+++ b/CHANGES
@@ -16,6 +16,7 @@ Bugfixes:
  - GB: Fix audio not being deinitialized
  - GBA Memory: Fix VCOUNT being writable
  - Qt: Only reset window dimensions when first shown
+ - GB Memory: Fix starting HDMAs during mode 0
 Misc:
  - PSP2: Improved controller rumble
  - GB, GBA: Prevent loading null ROMs
