--- a/CHANGES
+++ b/CHANGES
@@ -26,6 +26,7 @@ Bugfixes:
  - GBA Memory: Fix VCOUNT being writable
  - GBA Memory: Improve initial skipped BIOS state
  - Qt: Only reset window dimensions when first shown
+ - GB Memory: Fix starting HDMAs during mode 0
 Misc:
  - SDL: Remove scancode key input
  - GBA Video: Clean up unused timers
