--- a/CHANGES
+++ b/CHANGES
@@ -29,6 +29,7 @@ Bugfixes:
  - GB Memory: Fix starting HDMAs during mode 0
  - Qt: Fix Qt Multimedia audio driver on big endian
  - GBA: Fix IRQs firing after already being cleared
+ - All: Fix fullscreen config option being ignored
 Misc:
  - SDL: Remove scancode key input
  - GBA Video: Clean up unused timers
