--- a/CHANGES
+++ b/CHANGES
@@ -30,6 +30,7 @@ Bugfixes:
  - Qt: Fix Qt Multimedia audio driver on big endian
  - GBA: Fix IRQs firing after already being cleared
  - All: Fix fullscreen config option being ignored
+ - GBA BIOS: Implement BitUnPack
 Misc:
  - SDL: Remove scancode key input
  - GBA Video: Clean up unused timers
