GBA: Add savegame override for Crash Bandicoot 2

--- a/CHANGES
+++ b/CHANGES
@@ -31,6 +31,7 @@ Bugfixes:
  - GBA: Fix IRQs firing after already being cleared
  - All: Fix fullscreen config option being ignored
  - GBA BIOS: Implement BitUnPack
+ - GBA: Add savegame override for Crash Bandicoot 2
 Misc:
  - SDL: Remove scancode key input
  - GBA Video: Clean up unused timers
