--- a/CHANGES
+++ b/CHANGES
@@ -20,6 +20,7 @@ Bugfixes:
  - Qt: Fix Qt Multimedia audio driver on big endian
  - GBA: Fix IRQs firing after already being cleared
  - All: Fix fullscreen config option being ignored
+ - GBA: Add savegame override for Crash Bandicoot 2
 Misc:
  - PSP2: Improved controller rumble
  - GB, GBA: Prevent loading null ROMs
