--- a/CHANGES
+++ b/CHANGES
@@ -21,6 +21,7 @@ Bugfixes:
  - GBA: Fix IRQs firing after already being cleared
  - All: Fix fullscreen config option being ignored
  - GBA: Add savegame override for Crash Bandicoot 2
+ - ARM7: PSR mode bits should not get sign extended
 Misc:
  - PSP2: Improved controller rumble
  - GB, GBA: Prevent loading null ROMs
