ARM7: PSR mode bits should not get sign extended

--- a/CHANGES
+++ b/CHANGES
@@ -32,6 +32,7 @@ Bugfixes:
  - All: Fix fullscreen config option being ignored
  - GBA BIOS: Implement BitUnPack
  - GBA: Add savegame override for Crash Bandicoot 2
+ - ARM7: PSR mode bits should not get sign extended
 Misc:
  - SDL: Remove scancode key input
  - GBA Video: Clean up unused timers
