--- a/CHANGES
+++ b/CHANGES
@@ -22,6 +22,7 @@ Bugfixes:
  - All: Fix fullscreen config option being ignored
  - GBA: Add savegame override for Crash Bandicoot 2
  - ARM7: PSR mode bits should not get sign extended
+ - GBA Video: Fix out of bounds sprite transforms
  - GBA: Only unhalt CPU if appropriate bit is set in IE
 Misc:
  - PSP2: Improved controller rumble
