--- a/CHANGES
+++ b/CHANGES
@@ -28,7 +28,7 @@ Misc:
  - GB, GBA: Prevent loading null ROMs
 
 0.5.1: (2016-10-05)
-ugfixes:
+Bugfixes:
  - Core: Fix importing save games as read-only
  - FFmpeg: Fix encoding AAC
  - GB: Fix invalid STOP behavior on Game Boy Color
