--- a/CHANGES
+++ b/CHANGES
@@ -35,6 +35,7 @@ Bugfixes:
  - ARM7: PSR mode bits should not get sign extended
  - GBA: Only unhalt CPU if appropriate bit is set in IE
  - GBA Video: Fix out of bounds sprite transforms
+ - GB: Fix crash when masking savedata
 Misc:
  - SDL: Remove scancode key input
  - GBA Video: Clean up unused timers
