--- a/CHANGES
+++ b/CHANGES
@@ -54,6 +54,7 @@ Misc:
  - GBA Memory: Support reading/writing POSTFLG
  - Util: Add size counting to Table
  - Qt: Move last directory setting from qt.ini to config.ini
+ - 3DS, PSP2, Wii: Last directory loaded is saved
 
 0.5.1: (2016-10-05)
 Bugfixes:
