Qt: Fix Apply button for key and controller configurations

--- a/CHANGES
+++ b/CHANGES
@@ -27,6 +27,7 @@ Bugfixes:
  - GB: Fix crash when masking savedata
  - GB Audio: Fix serialization of channel 3 and NR52 properties
  - GB: Properly initialize sramRealVf variable
+ - Qt: Fix Apply button for key and controller configurations
 Misc:
  - PSP2: Improved controller rumble
  - GB, GBA: Prevent loading null ROMs
