GB Audio: Simplify envelope code

--- a/CHANGES
+++ b/CHANGES
@@ -57,6 +57,7 @@ Misc:
  - Util: Add size counting to Table
  - Qt: Move last directory setting from qt.ini to config.ini
  - 3DS, PSP2, Wii: Last directory loaded is saved
+ - GB Audio: Simplify envelope code
 
 0.5.1: (2016-10-05)
 Bugfixes:
