--- a/CHANGES
+++ b/CHANGES
@@ -58,6 +58,7 @@ Misc:
  - Qt: Move last directory setting from qt.ini to config.ini
  - 3DS, PSP2, Wii: Last directory loaded is saved
  - GB Audio: Simplify envelope code
+ - GB Audio: Improve initial envelope samples
 
 0.5.1: (2016-10-05)
 Bugfixes:
