--- a/CHANGES
+++ b/CHANGES
@@ -59,6 +59,7 @@ Misc:
  - 3DS, PSP2, Wii: Last directory loaded is saved
  - GB Audio: Simplify envelope code
  - GB Audio: Improve initial envelope samples
+ - GB Audio: Initialize wave RAM to GBC values
 
 0.5.1: (2016-10-05)
 Bugfixes:
