GB Video: Initialize LCDC in renderer

--- a/CHANGES
+++ b/CHANGES
@@ -39,6 +39,7 @@ Bugfixes:
  - GB Audio: Fix serialization of channel 3 and NR52 properties
  - GB: Properly initialize sramRealVf variable
  - Qt: Fix Apply button for key and controller configurations
+ - GB Video: Initialize LCDC in renderer
 Misc:
  - SDL: Remove scancode key input
  - GBA Video: Clean up unused timers
