--- a/CHANGES
+++ b/CHANGES
@@ -40,6 +40,7 @@ Bugfixes:
  - GB: Properly initialize sramRealVf variable
  - Qt: Fix Apply button for key and controller configurations
  - GB Video: Initialize LCDC in renderer
+ - GBA I/O: Mask off WAITCNT bits that cannot be written
 Misc:
  - SDL: Remove scancode key input
  - GBA Video: Clean up unused timers
