--- a/CHANGES
+++ b/CHANGES
@@ -41,6 +41,7 @@ Bugfixes:
  - Qt: Fix Apply button for key and controller configurations
  - GB Video: Initialize LCDC in renderer
  - GBA I/O: Mask off WAITCNT bits that cannot be written
+ - GB Memory: Fix HDMA5 value after DMA completes
 Misc:
  - SDL: Remove scancode key input
  - GBA Video: Clean up unused timers
