GB Video: Hblank IRQs should mask LYC=LY IRQs (fixes #466)

--- a/CHANGES
+++ b/CHANGES
@@ -31,6 +31,7 @@ Bugfixes:
  - GB Video: Initialize LCDC in renderer
  - GBA I/O: Mask off WAITCNT bits that cannot be written
  - GB Memory: Fix HDMA5 value after DMA completes
+ - GB Video: Hblank IRQs should mask LYC=LY IRQs
 Misc:
  - PSP2: Improved controller rumble
  - GB, GBA: Prevent loading null ROMs
