--- a/CHANGES
+++ b/CHANGES
@@ -42,6 +42,7 @@ Bugfixes:
  - GB Video: Initialize LCDC in renderer
  - GBA I/O: Mask off WAITCNT bits that cannot be written
  - GB Memory: Fix HDMA5 value after DMA completes
+ - GB Video: Hblank IRQs should mask LYC=LY IRQs
 Misc:
  - SDL: Remove scancode key input
  - GBA Video: Clean up unused timers
