--- a/CHANGES
+++ b/CHANGES
@@ -37,6 +37,7 @@ Misc:
  - PSP2: Improved controller rumble
  - GB, GBA: Prevent loading null ROMs
  - GB Audio: Initialize wave RAM to GBC values
+ - GB Memory: Reset ROM bank when loading a ROM
 
 0.5.1: (2016-10-05)
 Bugfixes:
