--- a/CHANGES
+++ b/CHANGES
@@ -66,6 +66,7 @@ Misc:
  - GB Audio: Improve initial envelope samples
  - GB Audio: Initialize wave RAM to GBC values
  - Debugger: Add functions for read- or write-only watchpoints
+ - GB Memory: Reset ROM bank when loading a ROM
 
 0.5.1: (2016-10-05)
 Bugfixes:
